Bug 1916333 - [devtools] Adapt Console filter input icon color in High Contrast Mode. r=devtools-reviewers,accessibility-frontend-reviewers,nlapre,ochameau
This sets --theme-icon-dimmed-color in High Contrast Mode to the
same color as regular icons.
Usages of the variable on text are migrated to --theme-comment,
and a new variable is created for disabled icon.

Differential Revision: https://phabricator.services.mozilla.com/D221608

UltraBlame original commit: 9cb905f3f50aaa30ffded176e0f74a4530345a8f

--- a/devtools/client/netmonitor/src/assets/styles/UrlPreview.css
+++ b/devtools/client/netmonitor/src/assets/styles/UrlPreview.css
@@ -1,8 +1,8 @@
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-
-
-
-
+/* Url Preview */
 
 .url-preview {
   border-bottom: 1px solid var(--theme-splitter-color);
@@ -24,8 +24,8 @@
   outline: none;
 }
 .url-preview td.splitter {
-  
-
+  /* This makes sure that the column spans the width of the
+    side bar so the contained horizontal splitter is visible */
   width: 100vw !important;
 }
 
@@ -57,7 +57,7 @@
 .url-preview .treeTable .treeLabelCell {
   --tree-label-cell-indent: 0 !important;
 }
-
+/* Indent the array params */
 .url-preview .treeTable .treeRow[aria-level="4"] .treeLabelCell {
   text-indent: 15px;
 }
@@ -66,10 +66,10 @@
   text-transform: capitalize;
 }
 
-
+/* Collapsed url */
 .url-preview tr.treeRow:first-child .treeLabelCell {
   font-weight: bold;
-  color: var(--theme-icon-dimmed-color);
+  color: var(--theme-comment);
 }
 
 .url-preview tr.treeRow .treeLabelCell {
@@ -92,7 +92,7 @@
 
 .url-preview .url-scheme,
 .url-preview .url-chars {
-  color: var(--theme-icon-dimmed-color);
+  color: var(--theme-comment);
 }
 
 .url-preview .url-params-name {
